# BranchDB

./: Cargo.toml  README.md  RUN.md
data/: 000048.sst  000180.sst  000183.sst  000188.sst  000197.sst  000261.sst  IDENTITY  LOG  LOG.old.1745959511602096  LOG.old.1745959550634167  LOG.old.1745959550639451  LOG.old.1745959573278541  LOG.old.1745959573285051  LOG.old.1745959640363610  LOG.old.1745959640370854  LOG.old.1745960587399276  LOG.old.1745960587406980  LOG.old.1745960722846244  LOG.old.1745960722853782  LOG.old.1745960798471212  LOG.old.1745960798476841  LOG.old.1745960975703154  LOG.old.1745960975709982  LOG.old.1745961065301454  LOG.old.1745961065308238  LOG.old.1745961632657749  LOG.old.1745961821151158  LOG.old.1745961905873736  LOG.old.1745966250316063  LOG.old.1745966268615943  LOG.old.1745966358541885  LOG.old.1745966366777672  LOG.old.1745966640869231  LOG.old.1745966654012718  LOG.old.1745966685838425  LOG.old.1745966943290458  LOG.old.1745967076390113  LOG.old.1745967137874783  LOG.old.1745967233483405  LOG.old.1745967274410540  (+30 more)
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/core/: branch.rs  crdt.rs  database.rs  merge.rs  mod.rs  models.rs  query.rs
test_gitdb/: IDENTITY  LOG  users.csv
test_gitdb/data/: 000071.sst  000078.sst  000087.sst  IDENTITY  LOG  LOG.old.1746591012325268  LOG.old.1746591020795822  LOG.old.1746591021457535  LOG.old.1746591027033075  LOG.old.1746591032483832  LOG.old.1746591038656506  LOG.old.1746591039299250  LOG.old.1746591054583286  LOG.old.1746591081346171  MANIFEST-000089  (+8 more)
test_repo/: IDENTITY  LOG
(+84 files in other folders)
