[package]
name = "gitdb"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = "0.34"
blake3 = "1.0"
crdts = "7.3"  # Or "8.0" if available
gix = "0.55"   # Formerly gitoxide
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
hex = "0.4"