[package]
name = "gitdb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rocksdb = "0.21"
bincode = "1.3"
blake3 = "1.3"
hex = "0.4"
thiserror = "1.0"
sqlparser = "0.25"
serde = { version = "1.0", features = ["derive"] }
crdts = "5.0.0"
once_cell = "1.18"
ctrlc = "3.4"
